--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^3.1.0",
@@ -38,6 +39,7 @@
     "jsdom": "^21.1.1",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.4",
+    "styled-components": "^5.3.10",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vitest": "^0.30.1"
