actionsの実行タイミングを修正

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,5 @@
 name: Deploy
-on:
-  workflow_run:
-    workflows:
-      - "Develop Check"
-    branches:
-      - main
-    types:
-      - completed
+on: push
 
 env:
   project-name: awesomemory_front
