--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,8 +38,13 @@ jobs:
         run: yarn build
 
       - name: Deploy to S3
-        run: |
-          aws s3 sync ./dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}
+        uses: opspresso/action-s3-sync@master
+          env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: ${{ secrets.AWS_REGION }}
+            FROM_PATH: "./out/"
+            DEST_PATH: "s3://awesomemory-v2"
 
       - name: CloudFront Cache Clear
         run: |
