--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,8 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          FROM_PATH: "./out/"
-          DEST_PATH: "s3://awesomemory-v2"
+          FROM_PATH: "./dist/"
+          DEST_PATH: ${{ secrets.AWS_S3_BUCKET_NAME }}
 
       - name: CloudFront Cache Clear
         run: |
