--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "axios": "^1.3.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-reset": "^4.4.6"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.4",
