--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-reset": "^4.4.6"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@storybook/addon-essentials": "^7.0.4",
     "@storybook/addon-interactions": "^7.0.4",
     "@storybook/addon-links": "^7.0.4",
