--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "testrun": "vitest run",
+    "plop": "plop",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -41,6 +42,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^21.1.1",
+    "plop": "^3.1.2",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.4",
     "styled-components": "^5.3.10",
