--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^21.1.1",
+    "msw": "^1.2.1",
     "plop": "^3.1.2",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.4",
@@ -50,5 +51,8 @@
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vitest": "^0.30.1"
+  },
+  "msw": {
+    "workerDirectory": "dist"
   }
 }
