--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mswjs/data": "^0.12.0",
     "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
@@ -34,6 +35,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
@@ -51,6 +53,7 @@
     "styled-components": "^5.3.10",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
+    "vite-plugin-node-polyfills": "^0.8.2",
     "vitest": "^0.30.1"
   },
   "msw": {
