--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^8.39.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
+    "jose": "^4.14.4",
     "jsdom": "^21.1.1",
     "msw": "^1.2.1",
     "plop": "^3.1.2",
